--- a/ports/raspberrypi/Makefile
+++ b/ports/raspberrypi/Makefile
@@ -187,6 +187,7 @@ SRC_SDK := \
 	src/rp2_common/pico_unique_id/unique_id.c \
 
 SRC_SDK := $(addprefix sdk/, $(SRC_SDK))
+$(patsubst %.c,$(BUILD)/%.o,$(SRC_SDK)): CFLAGS += -Wno-missing-prototypes
 
 SRC_C += \
 	boards/$(BOARD)/board.c \
