Changed lv_binding submodule fork and branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,7 +19,7 @@
 	url = https://github.com/NordicSemiconductor/nrfx.git
 [submodule "lib/lv_bindings"]
 	path = lib/lv_bindings
-	url = https://github.com/lvgl/lv_binding_micropython.git
+	url = git@github.com:minyiky/lv_binding_micropython.git
 [submodule "lib/mbedtls"]
 	path = lib/mbedtls
 	url = https://github.com/ARMmbed/mbedtls.git
