--- a/.gitmodules
+++ b/.gitmodules
@@ -20,6 +20,7 @@
 [submodule "lib/lv_bindings"]
 	path = lib/lv_bindings
 	url = git@github.com:minyiky/lv_binding_micropython.git
+	branch = espy_dive
 [submodule "lib/mbedtls"]
 	path = lib/mbedtls
 	url = https://github.com/ARMmbed/mbedtls.git
