Fixed submodule with detatched head

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,6 +21,7 @@
 	path = lib/lv_bindings
 	url = git@github.com:minyiky/lv_binding_micropython.git
 	branch = espy_dive
+	update = merge
 [submodule "lib/mbedtls"]
 	path = lib/mbedtls
 	url = https://github.com/ARMmbed/mbedtls.git
