--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
       with:
         submodules: false
         fetch-depth: 1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - name: Get CP deps
       run: python tools/ci_fetch_deps.py test ${{ github.sha }}
     - name: CircuitPython version
@@ -136,10 +136,10 @@ jobs:
       with:
         submodules: false
         fetch-depth: 1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - name: Get CP deps
       run: python tools/ci_fetch_deps.py mpy-cross-mac ${{ github.sha }}
     - name: CircuitPython version
@@ -202,10 +202,10 @@ jobs:
       run: |
         git describe --dirty --tags
         echo >>$GITHUB_ENV CP_VERSION=$(git describe --dirty --tags)
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - name: Install dependencies
       run: |
         sudo apt-get update
@@ -260,10 +260,10 @@ jobs:
         board: ${{ fromJSON(needs.test.outputs.boards-arm) }}
     if: ${{ needs.test.outputs.boards-arm != '[]' }}
     steps:
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - uses: actions/checkout@v2.2.0
       with:
         submodules: false
@@ -312,10 +312,10 @@ jobs:
         board: ${{ fromJSON(needs.test.outputs.boards-riscv) }}
     if: ${{ needs.test.outputs.boards-riscv != '[]' }}
     steps:
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - uses: actions/checkout@v2.2.0
       with:
         submodules: false
@@ -364,10 +364,10 @@ jobs:
         board: ${{ fromJSON(needs.test.outputs.boards-espressif) }}
     if: ${{ needs.test.outputs.boards-espressif != '[]' }}
     steps:
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - uses: actions/checkout@v2.2.0
       with:
         submodules: false
@@ -451,10 +451,10 @@ jobs:
         board: ${{ fromJSON(needs.test.outputs.boards-aarch) }}
     if: ${{ needs.test.outputs.boards-aarch != '[]' }}
     steps:
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python 3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: "3.x"
     - uses: actions/checkout@v2.2.0
       with:
         submodules: false
