/ports/esp32: New modbus interface.
- empty files created
- CMakeLists.txt adapted

Signed-off-by: Tobias Eydam <tobiaseydam@hotmail.com>

--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -71,6 +71,7 @@ set(MICROPY_SOURCE_PORT
     ${PROJECT_DIR}/network_ppp.c
     ${PROJECT_DIR}/network_wlan.c
     ${PROJECT_DIR}/network_wifi.c
+    ${PROJECT_DIR}/modmodbus.c
     ${PROJECT_DIR}/mpnimbleport.c
     ${PROJECT_DIR}/modsocket.c
     ${PROJECT_DIR}/modesp.c
@@ -108,6 +109,7 @@ set(IDF_COMPONENTS
     esp_rom
     esp_wifi
     freertos
+    freemodbus
     heap
     log
     lwip
