--- a/ports/.gitignore
+++ b/ports/.gitignore
@@ -1,5 +1,6 @@
 # this file only useful for Coldcard project
 stm32/boards/COLDCARD
+stm32/boards/COLDCARD_MK4
 unix/coldcard-mpy
 unix/unix_random.P
 
