mimxrt: Factor out low level flash functions from mimxrt_flash.c.
These will be needed for MSC support. The change matches the changes
for the bootloader.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -180,6 +180,7 @@ SRC_C += \
 	dma_manager.c \
 	drivers/bus/softspi.c \
 	drivers/dht/dht.c \
+	flash.c \
 	eth.c \
 	fatfs_port.c \
 	hal/pwm_backport.c \
