mimxrt: Implement mutual write permission with MSC use.
Porting PR #8814 of @iabdalkader to the mimxrt platform.
- When the board is mounted to a PC, local write access is blocked.
- Local write access will be re-enabled again if the disk is ejected.
- If the board is not connected to a PC on start-up, local write access
  is enabled.
- The status of the write access can be determined by bdev.ioctl(7, 0).
  If the device is mounted to a PAC and thus local write access is
  blocked, it return 1, otherwise 0.
- low level write/erase using the block device calls are still possible.
  It is up to the user to check the device status ahead.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -227,6 +227,7 @@ SHARED_SRC_C += \
 	shared/runtime/pyexec.c \
 	shared/runtime/softtimer.c \
 	shared/runtime/stdout_helpers.c \
+	shared/runtime/tinyusb_helpers.c \
 	shared/runtime/sys_stdio_mphal.c \
 	shared/timeutils/timeutils.c \
 
