--- a/.github/actions/deps/external/action.yml
+++ b/.github/actions/deps/external/action.yml
@@ -37,7 +37,7 @@ runs:
 
     # arm
     - name: Get arm toolchain
-      if: inputs.platform == 'aarch' || inputs.platform == 'arm'
+      if: inputs.platform == 'aarch' || inputs.platform == 'arm' || inputs.platform == 'nrf'
       uses: carlosperate/arm-none-eabi-gcc-action@v1
       with:
         release: '10-2020-q4'
@@ -63,6 +63,22 @@ runs:
         source $IDF_PATH/export.sh
         echo >> $GITHUB_ENV "IDF_PYTHON_ENV_PATH=$IDF_PYTHON_ENV_PATH"
         echo >> $GITHUB_PATH "$PATH"
+      shell: bash
+
+    # nrf
+    - name: Get nrfutil 7+
+      if: inputs.platform == 'nrf'
+      run: |
+        wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil
+        chmod +x nrfutil
+        ./nrfutil install nrf5sdk-tools
+        mkdir -p $HOME/.local/bin
+        mv nrfutil $HOME/.local/bin
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+      shell: bash
+    - name: Print nrfutil version
+      if: inputs.platform == 'nrf'
+      run: nrfutil -V
       shell: bash
 
     # riscv
