examples/natmod: Rename umodule to module.
This work was funded through GitHub Sponsors.

Signed-off-by: Jim Mussared <jim.mussared@gmail.com>

--- a/examples/natmod/re/Makefile
+++ b/examples/natmod/re/Makefile
@@ -1,11 +1,11 @@
 # Location of top-level MicroPython directory
 MPY_DIR = ../../..
 
-# Name of module (different to built-in urandom so it can coexist)
-MOD = urandom_$(ARCH)
+# Name of module (different to built-in re so it can coexist)
+MOD = re_$(ARCH)
 
 # Source files (.c or .py)
-SRC = urandom.c
+SRC = re.c
 
 # Architecture to build for (x86, x64, armv7m, xtensa, xtensawin)
 ARCH = x64
