--- a/examples/natmod/zlib/Makefile
+++ b/examples/natmod/zlib/Makefile
@@ -1,11 +1,11 @@
 # Location of top-level MicroPython directory
 MPY_DIR = ../../..
 
-# Name of module (different to built-in ure so it can coexist)
-MOD = ure_$(ARCH)
+# Name of module (different to built-in zlib so it can coexist)
+MOD = zlib_$(ARCH)
 
 # Source files (.c or .py)
-SRC = ure.c
+SRC = zlib.c
 
 # Architecture to build for (x86, x64, armv7m, xtensa, xtensawin)
 ARCH = x64
