rp2/machine_pin: Refactor the machine.Pin class for external GPIO.
Handle externally controlled GPIO pins more generically, by removing all
CYW43-specific code from `machine_pin.c`, and adding hooks to initialise,
configure, read and write external pins.  This allows any driver for an
on-board module which controls GPIO pins (such as CYW43 or NINA), to
provide its own implementation of those hooks and work seamlessly with
`machine_pin.c`.

--- a/ports/rp2/CMakeLists.txt
+++ b/ports/rp2/CMakeLists.txt
@@ -261,6 +261,10 @@ if (MICROPY_PY_NETWORK_CYW43)
         ${MICROPY_DIR}/extmod/network_cyw43.c
     )
 
+    list(APPEND MICROPY_SOURCE_PORT
+        machine_pin_cyw43.c
+    )
+
     target_link_libraries(${MICROPY_TARGET}
         cyw43_driver_picow
         cmsis_core
